# oaix

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  import_tokens.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
cmd/oaix-admin/: main.go
cmd/oaix-bench/: main.go
cmd/oaix-gateway/: main.go
cmd/oaix-migrate/: main.go
cmd/oaix-worker/: main.go
docs/: oaix-api-coverage-todo.md  oaix-go-rewrite-refactor-plan.md  oaix-multi-user-platform-plan.md  terminal-flush-marker.md
docs/api/: admin-api.md  import-state-machine.md  openapi.json
docs/runbooks/: oaix-multi-user-operations.md  oaix-multi-user-rollback.sql
frontend/: index.html
frontend/src/: App.tsx  styles.css
internal/admin/: doc.go
internal/affinity/: lane.go  lane_test.go  postgres.go  redis.go
internal/agentidentity/: agent_identity.go  agent_identity_test.go
internal/agentidentitytask/: coordinator.go  coordinator_test.go
oaix_gateway/: __init__.py  __main__.py  api_server.py  chat_image_store.py  codex_constants.py  database.py  fugue_observability.py  oauth.py  prompt_cache.py  prompt_observability.py  quota.py  request_store.py  token_identity.py  token_import_jobs.py  token_store.py  usage_cost.py
tests/: test_api_server_helpers.py  test_database_session_helpers.py  test_frontend_routes.py  test_oauth_helpers.py  test_quota_helpers.py  test_request_store.py  test_token_identity.py  test_token_import_jobs_helpers.py  test_token_selection_helpers.py  test_token_store_helpers.py  test_usage_cost_helpers.py
(+186 files in other folders)
